# capstone_ai

./: .dockerignore  .env_example  .gitignore  DEPLOY.md  Dockerfile  PROGRESS.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml  manage.yml
scripts/: averitec_dev_gold.json  predictions.json  run_averitec_predictions.py  run_dev.sh  run_test.sh
src/ai_backend/: config.py  db.py  logging_config.py  main.py  storage.py
src/ai_backend/api/: schemas.py
src/ai_backend/api/routes/: health.py  verify.py
src/ai_backend/core/: ids.py  llm.py  parsing.py  search.py  search_policy.py  verification.py
src/ai_backend/graph/: builder.py  state.py
src/ai_backend/graph/nodes/: aggregate.py  fact_check.py  numeric_check.py  preprocess.py  recency_check.py  source_check.py
src/ai_backend/graph/prompts/: aggregate.py  claim_extraction.py  fact_check.py  numeric_check.py  recency_check.py  source_check.py
src/ai_backend/models/: claim.py
